[package]
name = "circuit_converters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
thiserror = "1.0.26"
rand="0.8.4"
num-traits = "0.2.14"
derive_more = "0.99.0"
rayon = "1.5.1"
num-bigint = {version = "0.4.3", features = ["rand"] }
hex = "0.4.3"
sha2 = "0.10.2"

[profile.test]
opt-level = 3